[package]
name = "chess"
version = "0.1.0"
authors = ["Nathan Klundt <nathanryan001@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
egui = "0.19.0"
egui_extras = "0.19.0"
rand = "0.8.5"
image = "0.24.3"
